--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <div class="header__column">
                 <i class="fas fa-plane"></i>
                 <i class="fas fa-wifi"></i>
-
             </div>
             <div class="header__column">
                 <span class="header__time">18:38</span>
@@ -24,12 +23,44 @@
             <div class="header__column">
                 <i class="far fa-moon"></i>
                 <i class="fab fa-bluetooth-b"></i>
-                <span class="header__battery">66% <i class="fas fa-battery-full"></i>
-                    <!--battery icon--></span>
+                <span class="header__battery">66% <i class="fas fa-battery-full"></i></span>
             </div>
         </div>
-        <div class="header__bottom"></div>
+        <div class="header__bottom">
+            <div class="header__column">
+                <span class="header__text">Manage</span>
+            </div>
+            <div class="header__column">
+                <span class="header__text">Friends <span class="header__number">1</span>
+                </span>
+            </div>
+            <div class="header__column">
+                <i class="fa fa-cog fa-lg"></i>
+            </div>
+        </div>
     </header>
+
+    <nav class="tab-bar">
+        <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
+            <i class="fa fa-user"></i>
+            <span class="tab__bar__title">Friends</span>
+        </a>
+        <a href="chats.html" class="tab-bar__tab">
+            <i class="fa fa-comment"></i>
+            <span class="tab__bar__title">Chats</span>
+        </a>
+        <a href="find.html" class="tab-bar__tab">
+            <i class="fa fa-search"></i>
+            <span class="tab__bar__title">Find</span>
+        </a>
+        <a href="more.html" class="tab-bar__tab">
+            <i class="fa fa-ellipsis-h"></i>
+            <span class="tab__bar__title">More</span>
+        </a>
+        <a href="" class="tab-bar__tab"></a>
+    </nav>
+
+
 
 
 </body>
