--- a/chats.html
+++ b/chats.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--위에 상단바-->
     <header>
         <div class="header__top">
             <div class="header__column">
@@ -38,6 +39,46 @@
         </div>
     </header>
 
+
+    <!--중간에 들어갈 부분-->
+    <main class="chats">
+        <div class="search-bar">
+            <i class="fa fa-search"></i>
+            <input type="text" placeholder="Find friends, chats, Plus Friends">
+        </div>
+        <ul class="chats__list">
+            <li class="chats__chat">
+                <div class="chat__content">
+                    <img src="images/avatar.jpg">
+                    <div class="chat__preview">
+                        <h3 class="chat__user">Lynn</h3>
+                        <span class="chat__last-message">Hello! This is the text message</span>
+                    </div>
+                </div>
+                <span class="chat__date-time">
+                    15:55
+                </span>
+            </li>
+            <li class="chats__chat">
+                <div class="chat__content">
+                    <img src="images/avatar.jpg">
+                    <div class="chat__preview">
+                        <h3 class="chat__user">KaKaoTalk</h3>
+                        <span class="chat__last-message">You logged into KakaoTalk PC</span>
+                    </div>
+                </div>
+                <span class="chat__date-time">
+                    Jul 29
+                </span>
+            </li>
+        </ul>
+        <div class="chat-btn">
+            <i class="fa fa-comment"></i>
+        </div>
+    </main>
+
+
+    <!--밑에 네비게이션-->
     <nav class="tab-bar">
         <a href="index.html" class="tab-bar__tab ">
             <i class="fa fa-user"></i>
