--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </header>
             <div class="friends__section-rows">
                 <div class="friends__section-rows">
-                    <img src="" alt="">
+                    <img src="images/avatar.jpg" alt="">
                     <span class="friends__section-name">Nicolas</span>
                 </div>
                 <div class="friends__section-rows">
-                    <img src="" alt="">
+                    <img src="images/avatar.jpg" alt="">
                     <span class="friends__section-name">Friend's Names Display</span>
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div class="friends__section-rows">
                 <div class="friends__section-rows">
                     <div class="friends__section-column">
-                        <img src="" alt="">
+                        <img src="images/avatar.jpg" alt="">
                         <span class="friends__section-name">Nicolas</span>
                     </div>
                     <span class="friends__section-tagline">
@@ -77,9 +77,6 @@
                 </div>
             </div>
         </section>
-
-
-
     </main>
 
 
@@ -103,8 +100,6 @@
         </a>
         <a href="" class="tab-bar__tab"></a>
     </nav>
-
-
 
 
 </body>
