--- a/chat.html
+++ b/chat.html
@@ -39,7 +39,37 @@
             </div>
         </div>
     </header>
-
+    <main class="chat">
+        <div class="date-divider">
+            <span class="date-divider__text">Wednesday, August 2, 2017</span>
+        </div>
+        <div class="chat__message chat__message-from-me">
+            <span class="chat_message-time">17:55</span>
+            <span class="chat__message-body">
+                Hello! Nice to meet you!
+            </span>
+        </div>
+        <div class="chat__message chat__message-to-me">
+            <img src="images/avatar.jpg" alt="" class="chat__message-avatar">
+            <div class="chat__message-center">
+                <h3 class="chat_message-username">Koni</h3>
+                <span class="chat__message-body">
+                    Hello! This is Koni from 'how to train the mummy :D
+                </span>
+            </div>
+            <span class="chat_message-time">19:30</span>
+        </div>
+    </main>
+    <div class="type-message">
+        <i class="fa fa-plus fa-2x"></i>
+        <div class="type-message__input">
+            <input type="text">
+            <i class="far fa-smile"></i>
+            <span class="record-message">
+                <i class="fas fa-microphone"></i>
+            </span>
+        </div>
+    </div>
 
 </body>
 
