--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,9 @@
         </div>
         <div class="header__bottom">
             <div class="header__column">
-                <i class="fa fa-times fa-lg"></i>
+                <a href="index.html">
+                    <i class="fa fa-times fa-lg"></i>
+                </a>
             </div>
             <div class="header__column">
 
@@ -38,7 +40,25 @@
             </div>
         </div>
     </header>
-
+    <main class="profile">
+        <header class="profile__header">
+            <img src="images/avatar.jpg" alt="">
+            <h3 class="profile__header-title">Nicolas</h3>
+        </header>
+        <input type="text" placeholder="konikoni@gmail.com">
+        <div class="profile__actions">
+            <div class="profile__action">
+                <span class="profile__action-circle"></span>
+                <i class="fas fa-comment fa-2x"></i>
+                <span class="profile__action-title">My Chatroom</span>
+            </div>
+            <div class="profile__action">
+                <span class="profile__action-circle"></span>
+                <i class="fas fa-pencil-alt fa-2x"></i>
+                <span class="profile__action-title">Edit Profile</span>
+            </div>
+        </div>
+    </main>
 
 </body>
 
