--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <h6 class="friends__section-title">My Profile</h6>
             </header>
             <div class="friends__section-rows">
-                <div class="friends__section-rows">
+                <div class="friends__section-row">
+                    <img src="images/avatar.jpg" alt="">
                     <a href="profile.html">
-                        <img src="images/avatar.jpg" alt="">
-                        <span class="friends__section-name">Nicolas</span>
+                        Koni
                     </a>
                 </div>
-                <div class="friends__section-rows">
+                <div class="friends__section-row">
                     <img src="images/avatar.jpg" alt="">
                     <span class="friends__section-name">Friend's Names Display</span>
                 </div>
@@ -66,10 +66,10 @@
 
         <section class="friends__section">
             <header class="friends__section-header">
-                <h6 class="friends__section-title"></h6>
+                <h6 class="friends__section-title">Friends</h6>
             </header>
             <div class="friends__section-rows">
-                <div class="friends__section-rows">
+                <div class="friends__section-row with-tagline">
                     <div class="friends__section-column">
                         <img src="images/avatar.jpg" alt="">
                         <span class="friends__section-name">Nicolas</span>
