--- a/chats.html
+++ b/chats.html
@@ -67,6 +67,48 @@
                     <div class="chat__content">
                         <img src="images/avatar.jpg">
                         <div class="chat__preview">
+                            <h3 class="chat__user">Koni</h3>
+                            <span class="chat__last-message">Hello! This is the text message</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">Koni</h3>
+                            <span class="chat__last-message">Hello! This is the text message</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg">
+                        <div class="chat__preview">
+                            <h3 class="chat__user">Koni</h3>
+                            <span class="chat__last-message">Hello! This is the text message</span>
+                        </div>
+                    </div>
+                    <span class="chat__date-time">
+                        15:55
+                    </span>
+                </a>
+            </li>
+            <li class="chats__chat">
+                <a href="chat.html">
+                    <div class="chat__content">
+                        <img src="images/avatar.jpg">
+                        <div class="chat__preview">
                             <h3 class="chat__user">KaKaoTalk</h3>
                             <span class="chat__last-message">You logged into KakaoTalk PC</span>
                         </div>
